--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
     "datasets/ukMigration/ukMigration.csv",
     "datasets/usElections2016/usElections2016.csv",
     "datasets/diabetes/diabetes.csv",
+    "datasets/countries/countries.csv",
     "datasets/WHOSuicide/WHOSuicide.csv",
     "datasets/suicide/suicide.csv",
     "datasets/iris/iris.csv"
   ],
   "homepage": "https://github.com/nl253/JS-Typed-Array-Exensions#readme",
   "keywords": [
+    "table",
+    "dataframe",
     "array",
     "extensions",
     "typed",
