--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
   },
   "files": [
     "rand.js",
-    "DF.js",
+    "DataFrame.js",
     "log.js",
     "load.js",
-    "series.js",
+    "Series.js",
     "datasets/heart/heart.csv",
     "datasets/ukMigration/ukMigration.csv",
     "datasets/usElections2016/usElections2016.csv",
