Fix datasets licensing

--- a/package.json
+++ b/package.json
@@ -32,14 +32,17 @@
     "log.js",
     "load.js",
     "Series.js",
-    "datasets/heart/heart.csv",
-    "datasets/ukMigration/ukMigration.csv",
-    "datasets/usElections2016/usElections2016.csv",
-    "datasets/diabetes/diabetes.csv",
+    "datasets/mushrooms/mushrooms.csv",
+    "datasets/food/food.csv",
+    "datasets/alcohol/alcohol.csv",
+    "datasets/superheros/superheros.csv",
+    "datasets/lifting/lifting.csv",
+    "datasets/pokemon/pokemon.csv",
     "datasets/countries/countries.csv",
-    "datasets/WHOSuicide/WHOSuicide.csv",
-    "datasets/suicide/suicide.csv",
-    "datasets/iris/iris.csv"
+    "datasets/iris/iris.csv",
+    "datasets/got/got.csv",
+    "datasets/diabetes/diabetes.csv",
+    "datasets/happiness/happiness.csv"
   ],
   "homepage": "https://github.com/nl253/JS-Typed-Array-Exensions#readme",
   "keywords": [
