--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "DataFrame.js",
     "log.js",
     "load.js",
+    "utils.js",
     "Series.js",
     "datasets/mushrooms/mushrooms.csv",
     "datasets/food/food.csv",
