--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-security": "^1.4.0",
-    "jest": "^24.5.0"
+    "jest": "^24.5.0",
+    "jsdoc": "^3.5.5"
   },
   "engines": {
     "node": ">=10.15.3"
@@ -68,6 +69,7 @@
     "url": "https://github.com/nl253/DataFrame"
   },
   "scripts": {
+    "doc": "jsdoc -d ./docs -R ./README.md -r ./DataFrame.js Series.js rand.js utils.js",
     "test": "jest"
   },
   "version": "0.0.2-alpha"
