--- a/package.json
+++ b/package.json
@@ -29,27 +29,8 @@
     "node": ">=10.15.3"
   },
   "files": [
-    "rand.js",
-    "DataFrame.js",
-    "log.js",
-    "opts.js",
-    "load.js",
-    "utils.js",
-    "presets.js",
-    "Column.js",
-    "datasets/alcohol/alcohol.csv",
-    "datasets/blackFriday/blackFriday.csv",
-    "datasets/countries/countries.csv",
-    "datasets/darkNet/darkNet.csv",
-    "datasets/diabetes/diabetes.csv",
-    "datasets/food/food.csv",
-    "datasets/got/got.csv",
-    "datasets/happiness/happiness.csv",
-    "datasets/iris/iris.csv",
-    "datasets/lifting/lifting.csv",
-    "datasets/mushrooms/mushrooms.csv",
-    "datasets/pokemon/pokemon.csv",
-    "datasets/superheros/superheros.csv"
+    "*.js",
+    "datasets/*.csv"
   ],
   "homepage": "https://github.com/nl253/JS-Typed-Array-Exensions#readme",
   "keywords": [
@@ -78,5 +59,5 @@
     "loc": "tokei -- $(git ls-files | grep -E '\\.js$' | grep -v docs | grep -v bin)",
     "test": "jest"
   },
-  "version": "0.1.12-alpha"
+  "version": "0.1.14-alpha"
 }
