--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "csv": "^5.1.1",
     "csv-parse": "latest",
     "sync-request": "^6.1.0",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "csv-stringify": "latest"
   },
   "description": "Dataframe & Series library for statistics and tabular data manipulation (like pandas)",
   "devDependencies": {
