--- a/package.json
+++ b/package.json
@@ -62,5 +62,5 @@
     "loc": "tokei -- $(git ls-files | grep -E '\\.js$' | grep -v docs | grep -v bin)",
     "test": "jest"
   },
-  "version": "0.1.16-alpha"
+  "version": "0.2.0"
 }
