--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,8 @@ jobs:
       fail-fast: true
     runs-on: windows-latest
     steps:
+      - name: Clone Repository
+        run: git clone https://github.com/${{ github.repository }}
       - name: Checkout ${{ github.ref }} branch
         run: git checkout ${{ github.ref }}
       - name: Install Node Modules
