--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,8 @@ jobs:
       fail-fast: true
     runs-on: windows-latest
     steps:
+      - name: List Dir
+        run: ls -a
       - name: Clone Repository
         run: git clone "https://github.com/${{ github.repository }}" repository
       - name: Enter Repository
