--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,21 +13,21 @@ jobs:
       max-parallel: 4
       fail-fast: true
       matrix:
-        node: ['10', '8']
-        os: [windows-latest, ubuntu-lates]
+        node: ['12', '10', '8']
+        os: [windows-latest, ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v1
+        with:
+          ref: ${{ github.ref }}
       - uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node }}
       - name: Install Node Modules
         run: npm install
       - name: Lint Code
-        timeout-minutes: 15
         run: npx eslint
       - name: Test Code
         run: npm test
       - name: Audit NPM Packages
-        timeout-minutes: 15
         run: npm audit
