--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,6 +27,8 @@ jobs:
         run: npm install
       - name: Lint Code
         run: npx eslint
+      - name: Check JSDoc Types
+        run: npx jsdoc --pedantic --destination ./docs *.js
       - name: Test Code
         run: npm test
       - name: Audit NPM Packages
