--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-security": "^1.4.0",
     "jest": "^24.9.0",
-    "jsdoc": "3.6.3"
+    "jsdoc": "3.6.3",
+    "license-checker": "^25.0.1",
+    "retire": "^2.0.3"
   },
   "engines": {
     "node": ">=10.15.1"
