Fix eslint errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -62,7 +62,9 @@
         "getWithoutSet": true
       }
     ],
+    "indent": 1,
     "comma-dangle": 0,
+    "array-bracket-spacing": 1,
     "array-bracket-newline": [
       1,
       {
@@ -119,7 +121,6 @@
     "dot-notation": 1,
     "eol-last": 2,
     "filenames/match-exported": 2,
-    "filenames/match-regex": 2,
     "filenames/no-index": 2,
     "for-direction": 2,
     "func-name-matching": 1,
@@ -216,8 +217,10 @@
     "no-extra-bind": 2,
     "no-extra-boolean-cast": 2,
     "no-extra-label": 2,
+    "object-curly-spacing": 1,
+    "implicit-arrow-linebreak": 1,
     "no-extra-parens": [
-      2,
+      1,
       "functions"
     ],
     "no-fallthrough": 2,
@@ -266,8 +269,10 @@
       }
     ],
     "no-mixed-requires": 1,
+    "no-mixed-operators": 0,
+    "filenames/match-regex": 0,
     "no-mixed-spaces-and-tabs": 2,
-    "no-multi-spaces": 2,
+    "no-multi-spaces": [1, {"exceptions": { "VariableDeclarator": true, "ImportDeclaration": true, "Property": true  }}],
     "no-multi-str": 2,
     "no-negated-condition": 0,
     "no-negated-in-lhs": 2,
@@ -395,7 +400,7 @@
       "consistent-as-needed"
     ],
     "quotes": [
-      2,
+      1,
       "single",
       {
         "allowTemplateLiterals": true,
@@ -409,6 +414,7 @@
       2,
       "never"
     ],
+    "padded-blocks": 1,
     "semi-spacing": [
       2,
       {
