--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -56,12 +56,7 @@
   "rules": {
     "security/detect-object-injection": "off",
     "node/shebang": "off",
-    "accessor-pairs": [
-      1,
-      {
-        "getWithoutSet": true
-      }
-    ],
+    "accessor-pairs": 0,
     "indent": 1,
     "comma-dangle": 0,
     "array-bracket-spacing": 1,
@@ -92,15 +87,7 @@
     "newline-per-chained-call": 0,
     "callback-return": 1,
     "camelcase": 1,
-    "capitalized-comments": [
-      1,
-      "never",
-      {
-        "block": {
-          "ignorePattern": ".*"
-        }
-      }
-    ],
+    "capitalized-comments": 0,
     "class-methods-use-this": 1,
     "complexity": [
       1,
@@ -124,10 +111,7 @@
     "filenames/no-index": 2,
     "for-direction": 2,
     "func-name-matching": 1,
-    "func-names": [
-      1,
-      "as-needed"
-    ],
+    "func-names": 0,
     "generator-star-spacing": [
       1,
       {
@@ -174,7 +158,7 @@
       1,
       300
     ],
-    "max-statements-per-line": 1,
+    "max-statements-per-line": [2, {"max":  3}],
     "multiline-comment-style": 1,
     "multiline-ternary": "off",
     "new-parens": 2,
@@ -253,17 +237,24 @@
       1,
       {
         "ignore": [
-          0,
-          8,
-          16,
-          32,
-          64,
-          1,
-          2,
           -1,
           -2,
+          0,
+          1,
           10,
-          100
+          100,
+          16,
+          2,
+          3,
+          122,
+          97,
+          65,
+          0.1,
+          0.01,
+          32,
+          4,
+          64,
+          8
         ],
         "ignoreArrayIndexes": true
       }
@@ -334,7 +325,7 @@
     "no-throw-literal": 2,
     "no-undef-init": 2,
     "no-undefined": 0,
-    "no-underscore-dangle": [1, {"allowAfterThis": true}],
+    "no-underscore-dangle": 0,
     "no-unexpected-multiline": 2,
     "no-unmodified-loop-condition": 2,
     "no-unreachable": 2,
@@ -389,7 +380,7 @@
     "padding-line-between-statements": 1,
     "prefer-arrow-callback": 1,
     "prefer-const": 1,
-    "prefer-destructuring": 1,
+    "prefer-destructuring": [1, {"object":  true, "array":  false}],
     "prefer-numeric-literals": 1,
     "prefer-promise-reject-errors": 2,
     "prefer-rest-params": 1,
