--- a/package.json
+++ b/package.json
@@ -1,53 +1,8 @@
 {
-  "author": "Norbert Logiewa <norbertlogiewa96@gmail.com>",
-  "bugs": {
-    "url": "https://github.com/nl253/DataFrame/issues"
-  },
-  "dependencies": {
-    "csv": "^5.3.0",
-    "csv-parse": "^4.8.2",
-    "sync-request": "^6.1.0",
-    "winston": "^3.2.1",
-    "csv-stringify": "^5.3.3"
-  },
-  "browserslist": [],
-  "engineStrict": true,
-  "contributors": [
-    {
-      "email": "norbertlogiewa96@gmail.com",
-      "name": "Norber Logiewa",
-      "url": "https://github.com/nl253"
-    }
-  ],
-  "directories": {
-    "doc": "docs",
-    "lib": "./"
-  },
+  "name": "dataf",
+  "version": "0.2.1",
   "description": "Dataframe & Series library for statistics and tabular data manipulation (like pandas)",
-  "devDependencies": {
-    "eslint": "^5.15.1",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-compat": "^2.7.0",
-    "eslint-plugin-filenames": "^1.3.2",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-optimize-regex": "^1.1.6",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-security": "^1.4.0",
-    "jest": "^24.9.0",
-    "jsdoc": "3.6.3",
-    "license-checker": "^25.0.1",
-    "retire": "^2.0.3"
-  },
-  "engines": {
-    "node": ">=10.15.1"
-  },
-  "files": [
-    "*.js",
-    "datasets/*.csv"
-  ],
+  "readme": "https://nl253.github.io/DataFrame/index.html",
   "homepage": "https://github.com/nl253/DataFrame",
   "keywords": [
     "table",
@@ -63,20 +18,73 @@
     "statistics"
   ],
   "license": "MIT",
-  "main": "DataFrame.js",
-  "name": "dataf",
-  "private": false,
-  "readme": "https://nl253.github.io/DataFrame/index.html",
   "repository": {
     "type": "git",
     "url": "https://github.com/nl253/DataFrame"
   },
+  "bugs": {
+    "email": "norbertlogiewa96@gmail.com",
+    "url": "https://github.com/nl253/DataFrame/issues"
+  },
+  "author": "Norbert Logiewa <norbertlogiewa96@gmail.com>",
+  "maintainers": [
+    {
+      "email": "norbertlogiewa96@gmail.com",
+      "name": "Norbert Logiewa"
+    }
+  ],
+  "contributors": [
+    {
+      "email": "norbertlogiewa96@gmail.com",
+      "name": "Norber Logiewa",
+      "url": "https://github.com/nl253"
+    }
+  ],
+  "engines": {
+    "node": ">=10.15.1"
+  },
+  "engineStrict": true,
+  "browserslist": [],
+  "dependencies": {
+    "csv": "^5.3.0",
+    "csv-parse": "^4.8.2",
+    "sync-request": "^6.1.0",
+    "winston": "^3.2.1",
+    "csv-stringify": "^5.3.3"
+  },
+  "devDependencies": {
+    "eslint": "^6.7.1",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-compat": "^3.3.0",
+    "eslint-plugin-filenames": "^1.3.2",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-optimize-regex": "^1.1.7",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-security": "^1.4.0",
+    "jest": "^24.9.0",
+    "jsdoc": "3.6.3",
+    "license-checker": "^25.0.1",
+    "retire": "^2.0.3"
+  },
+  "main": "DataFrame.js",
+  "directories": {
+    "doc": "docs",
+    "lib": "./"
+  },
+  "files": [
+    "README.md",
+    "*.js",
+    "datasets/*.csv"
+  ],
+  "private": false,
   "scripts": {
-    "prepublishOnly": "npm run doc",
-    "lint": "eslint *.js",
+    "test": "npx jest",
     "doc": "echo -e 'PUBLISHING DOCS\\n' && rm -rf out docs && npx jsdoc -R README.md Column.js DataFrame.js opts.js presets.js && mv out docs && git add ./docs && git commit -am 'Update docs' -n && npm version patch && git push",
     "loc": "tokei -- $(git ls-files | grep -E '\\.js$' | grep -v docs | grep -v bin)",
-    "test": "jest"
-  },
-  "version": "0.2.1"
+    "lint": "npx eslint *.js",
+    "prepublishOnly": "npm run doc"
+  }
 }
