--- a/package.json
+++ b/package.json
@@ -67,7 +67,16 @@
     "jest": "^24.9.0",
     "jsdoc": "3.6.3",
     "license-checker": "^25.0.1",
-    "retire": "^2.0.3"
+    "markdownlint": "^0.17.2",
+    "markdownlint-cli": "^0.19.0",
+    "remark": "^11.0.2",
+    "remark-cli": "^7.0.1",
+    "remark-lint": "^6.0.5",
+    "remark-preset-lint-consistent": "^2.0.3",
+    "remark-preset-lint-markdown-style-guide": "^2.1.3",
+    "remark-preset-lint-recommended": "^3.0.3",
+    "retire": "^2.0.3",
+    "write-good": "^1.0.2"
   },
   "main": "DataFrame.js",
   "directories": {
@@ -80,6 +89,13 @@
     "datasets/*.csv"
   ],
   "private": false,
+  "remarkConfig": {
+    "plugins": [
+      "remark-preset-lint-recommended",
+      "remark-preset-lint-markdown-style-guide",
+      "remark-preset-lint-consistent"
+    ]
+  },
   "scripts": {
     "test": "npx jest",
     "doc": "echo -e 'GENERATING DOCS\\n'; rm -rf ./docs; npx jsdoc -d ./docs -R ./README.md ./*.js",
