--- a/package.json
+++ b/package.json
@@ -100,10 +100,10 @@
   },
   "scripts": {
     "test": "npx jest",
-    "doc": "echo -e 'GENERATING DOCS\\n'; rm -rf ./docs; npx jsdoc -d ./docs -R ./README.md ./*.js",
-    "doc:publish": "echo -e 'PUBLISHING DOCS\\n'; npm run doc; git add ./docs; git commit -am 'Update docs' -n; npm version patch; git push",
-    "doc:open": "npm run doc; $BROWSER ./docs/index.html",
-    "loc": "tokei -- $(git ls-files | grep -E '\\.js$' | grep -v docs | grep -v bin)",
+    "doc": "echo -e 'GENERATING DOCS\\n' && rm -rf ./docs && npx jsdoc -d ./docs -R ./README.md ./*.js",
+    "doc:publish": "echo -e 'PUBLISHING DOCS\\n' && npm run doc && git add ./docs && git commit -am 'Update docs' -n && git push",
+    "doc:open": "npm run doc && $BROWSER ./docs/index.html",
+    "loc": "tokei -- $(git ls-files | grep -v docs | grep -v bin)",
     "lint": "npx eslint *.js",
     "prepublishOnly": "npm run doc:publish"
   }
