--- a/package.json
+++ b/package.json
@@ -100,17 +100,17 @@
   },
   "scripts": {
     "test": "npx jest",
-    "doc": "echo -e 'GENERATING DOCS\\n' && rm -rf ./docs && npx jsdoc --pedantic -d ./docs -R ./README.md ./*.js",
-    "doc:open": "npm run doc && $BROWSER ./docs/index.html",
-    "doc:publish": "echo -e 'PUBLISHING DOCS\\n' && npm run doc && git add ./docs && git commit -am 'Update docs' -n && git push",
-    "loc": "tokei -- $(git ls-files | grep -v docs | grep -v bin)",
-    "lint": "npm run lint:code && npm run lint:doc && npm run lint:deps",
-    "lint:code": "npx eslint *.js",
-    "lint:doc": "npm run lint:doc:markdown-lint && npm run lint:doc:write-good && npm run lint:doc:remark",
-    "lint:doc:write-good": "npx write-good --so --weasel --tooWordy --cliches --thereIs *.md || echo ''",
-    "lint:doc:markdown-lint": "npx markdownlint *.md",
-    "lint:doc:remark": "npx remark -u lint *.md",
-    "lint:deps": "npm run lint:deps:license && npm run lint:deps:security",
+    "doc": "bash -c \"echo -e 'GENERATING DOCS\\n' && rm -rf ./docs && npx jsdoc --pedantic -d ./docs -R ./README.md ./*.js\"",
+    "doc:open": "bash -c \"npm run doc && $BROWSER ./docs/index.html\"",
+    "doc:publish": "bash -c \"echo -e 'PUBLISHING DOCS\\n' && npm run doc && git add ./docs && git commit -am 'Update docs' -n && git push\"",
+    "loc": "bash -c \"tokei -- $(git ls-files | grep -v docs | grep -v bin)\"",
+    "lint": "bash -c \"npm run lint:code && npm run lint:doc && npm run lint:deps\"",
+    "lint:code": "bash -c \"npx eslint *.js\"",
+    "lint:doc": "bash -c \"npm run lint:doc:markdown-lint && npm run lint:doc:write-good && npm run lint:doc:remark\"",
+    "lint:doc:write-good": "bash -c \"npx write-good --so --weasel --tooWordy --cliches --thereIs *.md || echo ''\"",
+    "lint:doc:markdown-lint": "bash -c \"npx markdownlint *.md\"",
+    "lint:doc:remark": "bash -c \"npx remark -u lint *.md\"",
+    "lint:deps": "bash -c \"npm run lint:deps:license && npm run lint:deps:security\"",
     "lint:deps:security": "npx retire --js",
     "lint:deps:license": "npx license-checker --summary",
     "prepublishOnly": "npm run doc:publish"
