--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,26 +23,29 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node }}
-      - name: Validate JSON
-        shell: bash
-        run: f() { for i in *.json; do npx jsonlint "$i" || return 1; done; }; f
       - name: Install Node Modules
         run: npm install
+      - name: Validate JSON
+        shell: bash
+        run: npm run lint:json
+      - name: Validate JavaScript
+        shell: bash
+        run: npm run lint:js
       - name: Lint Code
         shell: bash
         run: npm run lint:code
       - name: Lint Docs
         shell: bash
         run: npm run lint:doc
-      - name: Check JSDoc Types
-        shell: bash
-        run: npm run doc
-      - name: Test Code
-        shell: bash
-        run: npm test
-      - name: Audit NPM Packages
-        if: matrix.node >= 10
-        run: npm audit
       - name: Lint Dependencies
         shell: bash
         run: npm run lint:deps
+      - name: Check JSDoc Types
+        shell: bash
+        run: npm run lint:types
+      - name: Check Typescript Types
+        shell: bash
+        run: npm run lint:ts
+#      - name: Test Code
+#        shell: bash
+#        run: npm test
